# haptools

./: .devcontainer.json  .gitignore  .readthedocs.yaml  .snakemake-workflow-catalog.yml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  dev-env.yml  devcontainer.json  nohup.out  noxfile.py  pyproject.toml  run.bash  simple-haps.pgen  simple-haps.psam  simple-haps.pvar  temp-transform.vcf
.github/: pull_request_template.md
.github/workflows/: comment_bot.yml  constraints.txt  conventional-prs.yml  release.yml  tests.yml
config/: README.md  config.yml
docs/: conf.py  index.rst
docs/api/: data.rst  examples.rst  haptools.rst  modules.rst  simwas.rst
docs/commands/: clump.rst  index.rst  karyogram.md  karyogram.rst  ld.rst  simgenotype.md  simgenotype.rst  simgenotype_md.md  simphenotype.md  simphenotype.rst  transform.rst  val_hapfile.rst  validate.rst
docs/executing/: inputs.rst
docs/formats/: breakpoints.rst  genotypes.rst  haplotypes.rst  inputs.rst  ld.rst  linear.rst  maps.rst  models.rst  phenotypes.rst  sample_info.rst  snplist.rst
docs/project_info/: contributing.rst  example_files.rst  haptools_file_formats.rst  installation.rst
example-files/: 1000genomes_sampleinfo.tsv
haptools/: __init__.py  __main__.py  admix_storage.py  clump.py  haplotype.py  haplotypes.py  index.py  karyogram.py  ld.py  logging.py  sim_admixture.py  sim_genotype.py  sim_phenotype.py  sim_phenotypes.py  transform.py  val_hapfile.py  validate.py
haptools/admixture_sim/: admix_storage.py  sim_admixture.py
haptools/data/: __init__.py  breakpoints.py  covariates.py  data.py  genotypes.py  haplotypes.py  phenotypes.py  tr_harmonizer.py  variant.py
haptools/haputils/: haplotypes.py
haptools/karyogram/: README.md  karyogram.py  to_remove.py
haptools/simgenotype/: README.md  admix_storage.py  sim_admixture.py
haptools/simphenotype/: README.md  sim_phenotypes.py
haptools/visualization/: \  karyogram.py  to_remove.py
simwas/: __main__.py  classes.py  sim_admixture.py
simwas/data/: __init__.py  data.py  genotypes.py  phenotypes.py
snakemake/: README.md  run.bash
snakemake/config/: README.md  config.yml
snakemake/workflow/: Snakefile
snakemake/workflow/envs/: default.yml  shapeit.yml
snakemake/workflow/notebooks/: run_finemap-susie.ipynb  run_finemap-susie_vignette.ipynb
snakemake/workflow/scripts/: README.md  finemapping_methods.R  generate_phenotypes.py  gt_matrix.py  ld_heatmap.py  plot_phenotypes.py
tests/: bench_genotypes.py  bench_genotypes_TR.py  bench_transform.py  test.hap  test_clump.py  test_data.py  test_index.py  test_karyogram.py  test_ld.py  test_logging.py  test_outputvcf.py  test_simgenotype.py  test_simphenotype.py  test_transform.py  test_val_hapfile.py  test_validate.py
tests/data/: apoe.hap  apoe.snplist  apoe.vcf.gz.tbi  apoe4.hap  basic.comment.hap.gz.tbi  basic.hap  basic.hap.gz.tbi  basic.nocomment.hap.gz.tbi  centromeres_hg19.txt  centromeres_noX_hg19.txt  covars.tsv  example.hap  example.hap.gz.tbi  example.pgen  example.psam  example.pvar  example.vcf.gz.tbi  example_haplotypes.hap.gz.tbi  faulty_info.tab  faulty_vcf.vcf  faulty_vcf_info.vcf  only_tr.hap  outvcf_info-one_CEU.tab  outvcf_info.tab  outvcf_info_random.tab  outvcf_out.pgen  outvcf_out.psam  outvcf_out.pvar  outvcf_out.vcf  outvcf_out.vcf.gz.tbi  outvcf_test.bp  outvcf_test.pgen  outvcf_test.psam  outvcf_test.pvar  outvcf_test.vcf  outvcf_test.vcf.gz.tbi  outvcf_test_chr.bp  outvcf_test_chr.vcf  outvcf_test_no_replace.bp  outvcf_test_no_replace.vcf  (+43 more)
tests/data/hapfiles/: basic.hap  valhap_test_data.hap  valhap_test_data.pvar  valhap_with_duplicate_ids.hap  valhap_with_duplicate_vids_per_haplotype.hap  valhap_with_excol_of_wrong_type.hap  valhap_with_hrid_of_chromosome.hap  valhap_with_inconvertible_ends_var.hap  valhap_with_invalid_column_addition_data_types.hap  valhap_with_no_version.hap  valhap_with_out_of_header_metas.hap  valhap_with_start_after_end.hap  valhap_with_unassociated_haplotype.hap  valhap_with_unexistent_reorders.hap  valhap_with_variant_inexistent_haplotype_id.hap
tests/data/map/: chr22.test.map
tests/data/test_map/: chr.test.22.map
tests/data/valhap/: basic_missing_ids.pvar  correct.hap  empty_lines.hap  inconvertible_starts.hap  inconvertible_starts_var.hap  multiple_order_defs.hap
tests/data/validate/: 10_extras_reordered.hap  basic.hap  basic.hap.gz.tbi  basic.pvar  empty_lines.hap  inadequate_version.hap  inadequate_version_columns.hap  inconvertible_ends.hap  insufficient_columns.hap  insufficient_excols_in_reorder.hap  invalid_column_addition_column_count.hap  invalid_column_addition_types.hap  multiple_versions.hap  simple.hap  unexistent_col_in_order.hap  unexistent_fields.hap  unexistent_reorders.hap  unrecognizable_allele.hap  variant_id_of_chromosome.hap
workflow/: Snakefile
workflow/envs/: default.yml  susie.yml
workflow/notebooks/: run_finemap-susie.ipynb  run_finemap-susie_vignette.ipynb
workflow/scripts/: README.md  finemapping_methods.R  generate_phenotypes.py  gt_matrix.bash  gt_matrix.py  make_gt_matrix.bash  plot_phenotypes.py  snp_gt_matrix.bash  str_gt.py  str_gt_matrix.bash  summarize_results.R
