[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "haptools"
version = "0.5.0"
description = "Ancestry and haplotype aware simulation of genotypes and phenotypes for complex trait analysis"
authors = [
    {name = "Arya Massarat"},
    {name = "Michael Lamkin"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "click>=8.0.3",
    "pysam>=0.19.0",
    "cyvcf2>=0.30.14",
    "matplotlib>=3.5.1",
    "pgenlib>=0.90.1",
]

[tool.poetry.dependencies]
numpy = [
    { version = "1.20.0" , markers = "python_version <= '3.9'" },
    { version = "2.2.2" , markers = "python_version > '3.9'" },
]
click = [
    { version = "8.0.3" , markers = "python_version <= '3.9'" },
    { version = "8.1.1" , markers = "python_version > '3.9'" },
]
pysam = [
    { version = "0.19.0" , markers = "python_version <= '3.9'" },
    { version = "0.23.0" , markers = "python_version > '3.9'" },
]
cyvcf2 = [
    { version = "0.30.14" , markers = "python_version <= '3.9'" },
    { version = "0.31.1" , markers = "python_version > '3.9'" },
]
matplotlib = [
    { version = "3.5.1" , markers = "python_version <= '3.9'" },
    { version = "3.10.0" , markers = "python_version > '3.9'" },
]
pgenlib = [
    { version = "0.90.1" , markers = "python_version <= '3.9'" },
    { version = "0.92.0" , markers = "python_version > '3.9'" },
]

[project.urls]
repository = "https://github.com/cast-genomics/haptools"
homepage = "https://github.com/cast-genomics/haptools"
documentation = "https://haptools.readthedocs.io"
changelog = "https://github.com/CAST-genomics/haptools/blob/main/CHANGELOG.md"

[project.scripts]
haptools = "haptools.__main__:main"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.3.2"
sphinx-autodoc-typehints = ">=1.12.0"
sphinx-rtd-theme = ">=1.0.0"
numpydoc = ">=1.1.0"
sphinx-click = ">=3.0.2"

[tool.poetry.group.tests.dependencies]
pytest = ">=7.4.3"
black = [
    { version = ">=23.3.0" , markers = "python_version < '3.9'" },
    { version = ">=25.1.0" , markers = "python_version >= '3.9'" },
]
ipython = ">=7.34.0"
coverage = {extras = ["toml"], version = ">=7.2.7"}
filprofiler = ">=2023.3.1"

[tool.poetry.requires-plugins]
poetry-conda = ">=0.1.4"
poetry-plugin-export = ">=1.9"
poetry-plugin-shell = ">=1.0.1"

[tool.black]
line-length = 88
preview = true
extend-exclude = "haptools/(sim_genotype|karyogram).py"

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
